# antelope-io-contract-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.json  run.sh  tsconfig.json
blockchain/nodeos-data-volume/nodeos-data/config/: config.ini
include/: main.hpp
ricardian/: main.contracts.md
scripts/: build.sh  constant.sh  run.sh  setup.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.test.cpp  main.test.ts
